--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -1,7 +1,8 @@
 @import url('https://fonts.googleapis.com/css2?family=Poppins&display=swap');
 
-$background: #121212;
-$background-secondary: hsl(0,0%, 15%);
+$background: #181818;
+//$background-secondary: rgb(28, 28, 28, 0.8);
+$background-secondary: hsl(0,0%, 12%);
 $primary-color: #6F49DD;
 $text-color: #FFFFFF;
 
